[package]
name = "grpc_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.18"
tonic = "0.14.2"
tonic-prost = "0.14.2"


[build-dependencies]
tonic-prost-build = "0.14.2"
